--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       - run: git submodule update --init --remote --merge
       - run:
           name: npm install
-          command: npm install
+          command: npm ci
       - save_cache:
           key: v1-dependency-cache-{{ checksum "package-lock.json" }}
           paths:
