--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "ng2-daterangepicker": "^2.0.6",
     "ng2-file-upload": "^1.3.0",
     "ngx-clipboard": "10.0.0",
-    "ngx-infinite-scroll": "^0.4.2",
+    "ngx-infinite-scroll": "6.0.1",
     "normalize.css": "^7.0.0",
     "numeral": "^2.0.6",
     "rxjs": "^6.2.1",
