--- a/package.json
+++ b/package.json
@@ -9,18 +9,12 @@
     "e2e.dev": "protractor --baseUrl='https://development-admin.sixcrm.com'",
     "e2e.stage": "protractor --baseUrl='https://staging-admin.sixcrm.com'",
     "e2e.prod": "protractor --baseUrl='https://admin.sixcrm.com'",
-    "e2e-custom": "ng e2e",
-    "build.local.depricated": "node --max_old_space_size=3072 ./node_modules/webpack/bin/webpack --config webpack-local.config.js",
-    "build.dev.depricated": "node --max_old_space_size=3072 ./node_modules/webpack/bin/webpack --config webpack-dev.config.js",
-    "build.stage.depricated": "node --max_old_space_size=3072 ./node_modules/webpack/bin/webpack --config webpack-stage.config.js",
-    "build.prod.depricated": "node --max_old_space_size=3072 ./node_modules/webpack/bin/webpack --config webpack-prod.config.js",
-    "build.priority.depricated": "node --max_old_space_size=3072 ./node_modules/webpack/bin/webpack --config webpack-priority.config.js",
-    "start.depricated": "node --max_old_space_size=3072 ./node_modules/webpack-dev-server/bin/webpack-dev-server --config webpack-local.config.js --port=4200",
     "start": "node --max_old_space_size=3072 ./node_modules/@angular/cli/bin/ng serve",
     "build.local": "node --max_old_space_size=3072 ./node_modules/@angular/cli/bin/ng build",
     "build.dev": "node --max_old_space_size=3072 ./node_modules/@angular/cli/bin/ng build --configuration=development",
     "build.stage": "node --max_old_space_size=3072 ./node_modules/@angular/cli/bin/ng build --configuration=staging",
     "build.prod": "node --max_old_space_size=3072 ./node_modules/@angular/cli/bin/ng build --configuration=production",
+    "build.priority": "node --max_old_space_size=3072 ./node_modules/@angular/cli/bin/ng build PriorityAngular --configuration=production",
     "pree2e": "webdriver-manager update --standalone false --gecko false --quiet",
     "postinstall": "npm run patch-cli",
     "patch-cli": "node cli-patches/crypto-patch.js"
