--- a/package.json
+++ b/package.json
@@ -26,17 +26,17 @@
   "author": "",
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.0.0",
-    "@angular/cdk": "~7.0.0",
-    "@angular/common": "~7.0.0",
-    "@angular/compiler": "~7.0.0",
-    "@angular/core": "~7.0.0",
-    "@angular/forms": "~7.0.0",
-    "@angular/http": "~7.0.0",
-    "@angular/platform-browser": "~7.0.0",
-    "@angular/platform-browser-dynamic": "~7.0.0",
-    "@angular/router": "~7.0.0",
-    "@angular/material": "~7.0.0",
+    "@angular/animations": "7.2.2",
+    "@angular/cdk": "7.2.2",
+    "@angular/common": "7.2.2",
+    "@angular/compiler": "7.2.2",
+    "@angular/core": "7.2.2",
+    "@angular/forms": "7.2.2",
+    "@angular/http": "7.2.2",
+    "@angular/platform-browser": "7.2.2",
+    "@angular/platform-browser-dynamic": "7.2.2",
+    "@angular/router": "7.2.2",
+    "@angular/material": "7.2.2",
     "@auth0/angular-jwt": "^2.0.0",
     "angular2-highcharts": "0.5.5",
     "angular2-markdown": "^2.2.3",
@@ -71,9 +71,9 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/cli": "~7.0.2",
-    "@angular/compiler-cli": "~7.0.0",
-    "@angular/language-service": "~7.0.0",
+    "@angular/cli": "7.2.2",
+    "@angular/compiler-cli": "7.2.2",
+    "@angular/language-service": "7.2.2",
     "@types/file-saver": "0.0.1",
     "@types/hammerjs": "^2.0.33",
     "@types/highcharts": "4.2.42",
