add packages from dev

--- a/package.json
+++ b/package.json
@@ -28,15 +28,15 @@
   "dependencies": {
     "@angular/animations": "7.2.2",
     "@angular/cdk": "7.2.2",
-    "@angular/common": "^5.2.11",
-    "@angular/compiler": "^7.2.2",
-    "@angular/core": "^7.2.2",
+    "@angular/common": "7.2.2",
+    "@angular/compiler": "7.2.2",
+    "@angular/core": "7.2.2",
     "@angular/forms": "7.2.2",
     "@angular/http": "7.2.2",
-    "@angular/material": "7.2.2",
-    "@angular/platform-browser": "^5.2.11",
+    "@angular/platform-browser": "7.2.2",
     "@angular/platform-browser-dynamic": "7.2.2",
     "@angular/router": "7.2.2",
+    "@angular/material": "7.2.2",
     "@auth0/angular-jwt": "^2.0.0",
     "angular2-highcharts": "0.5.5",
     "angular2-markdown": "^2.2.3",
@@ -52,7 +52,7 @@
     "jsonwebtoken": "^8.2.1",
     "jspdf": "^1.4.1",
     "juice": "^4.3.2",
-    "materialize-css": "^1.0.0",
+    "materialize-css": "^0.98.0",
     "moment": "^2.18.1",
     "moment-timezone": "^0.5.13",
     "ng2-codemirror": "^1.1.2",
@@ -62,7 +62,7 @@
     "ngx-infinite-scroll": "6.0.1",
     "normalize.css": "^7.0.0",
     "numeral": "^2.0.6",
-    "rxjs": "^5.5.12",
+    "rxjs": "^6.2.1",
     "rxjs-compat": "^6.2.0",
     "sha1": "^1.1.1",
     "text-mask-addons": "^3.5.1",
@@ -70,10 +70,9 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.7",
-    "@angular-devkit/core": "0.6.8",
+    "@angular-devkit/build-angular": "~0.10.0",
     "@angular/cli": "7.2.2",
-    "@angular/compiler-cli": "^7.2.11",
+    "@angular/compiler-cli": "7.2.2",
     "@angular/language-service": "7.2.2",
     "@types/file-saver": "0.0.1",
     "@types/hammerjs": "^2.0.33",
@@ -86,34 +85,34 @@
     "@types/numeral": "0.0.20",
     "autoprefixer": "^7.2.3",
     "aws-sdk": "^2.97.0",
-    "circular-dependency-plugin": "^4.2.1",
     "codelyzer": "~1.0.0-beta.4",
-    "file-loader": "^1.1.5",
-    "istanbul-instrumenter-loader": "^3.0.0",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.7.0",
-    "karma": "^4.0.1",
+    "karma": "~1.4.1",
     "karma-chrome-launcher": "~2.0.0",
     "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "less-loader": "^4.0.5",
-    "node-sass": "^4.11.0",
-    "postcss-import": "^11.0.0",
+    "node-sass": "4.8.3",
     "postcss-loader": "^2.0.10",
-    "postcss-url": "^7.1.2",
-    "protractor": "^5.4.0",
+    "protractor": "5.2.2",
     "protractor-beautiful-reporter": "^1.2.1",
-    "protractor-jasmine2-screenshot-reporter": "^0.5.0",
-    "raw-loader": "^0.5.1",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.1",
-    "stylus-loader": "^3.0.1",
     "supertest": "^3.0.0",
     "ts-node": "~7.0.0",
     "tslint": "3.15.1",
     "typescript": "~3.1.1",
+    "@angular-devkit/core": "0.6.8",
+    "file-loader": "^1.1.5",
+    "less-loader": "^4.0.5",
+    "postcss-import": "^11.0.0",
+    "postcss-url": "^7.1.2",
+    "protractor-jasmine2-screenshot-reporter": "^0.5.0",
+    "raw-loader": "^0.5.1",
+    "sass-loader": "^6.0.6",
+    "istanbul-instrumenter-loader": "^3.0.0",
+    "style-loader": "^0.19.1",
+    "stylus-loader": "^3.0.1",
     "url-loader": "^0.6.2",
-    "webdriver-manager": "^13.0.0"
+    "circular-dependency-plugin": "^4.2.1"
   }
 }
